--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1635,12 +1635,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Moscow ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -1966,12 +1964,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Saint-Petersburg ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2137,12 +2133,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Kazan ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2165,12 +2159,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Kemorovo ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2193,12 +2185,10 @@ Due to common customs problems we created google group to discuss how to get tha
 
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2220,12 +2210,10 @@ Due to common customs problems we created google group to discuss how to get tha
 
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2246,12 +2234,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Niznhny Novgorod ===  
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2284,12 +2270,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Rostov-on-Don ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2322,12 +2306,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Krasnodar ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2356,12 +2338,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Penza ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2383,12 +2363,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Stavropol ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2410,12 +2388,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Voronezh ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2448,12 +2424,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Kurgan ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2475,12 +2449,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Vladivostok ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2505,12 +2477,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Yoshkar-Ola ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2534,12 +2504,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Veliky Novgorod ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2562,12 +2530,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Kostroma ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2589,12 +2555,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Tomsk ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2615,12 +2579,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Samara ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
@@ -2641,12 +2603,10 @@ Due to common customs problems we created google group to discuss how to get tha
 === Ufa ===
 
 {| border="1"
-| login
-| google groups name
+|rowspan=2| login
+|rowspan=2| google groups name
 | colspan="3"| number of items
 |-
-|
-|
 | Neo FreeRunner
 | Dboard
 | Spares Pack
