/* A list of definitive spellings used throughout the site */

--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -109,7 +109,7 @@ Please see available [[Templates]] and add them where necessary.
 *O
 ** "Openmoko" or "Om"
 *** (the name of the complete software stack)
-*** (not "Openmoko" anymore as of [http://www.businesswire.com/portal/site/home/?newsLang=en&viewID=news_view_popup&epi-content=NEWS_VIEW_POPUP_TYPE&beanStrID=reportcenterndm&newsId=20080304005158 March 2008].    Note this change means many current entries in the wiki are wrong - please help to amend!)
+*** (not "OpenMoko" anymore as of [http://www.businesswire.com/portal/site/home/?newsLang=en&viewID=news_view_popup&epi-content=NEWS_VIEW_POPUP_TYPE&beanStrID=reportcenterndm&newsId=20080304005158 March 2008].)
 ** Openmoko Inc
 *** (the name of the Taiwanese company that develops products for the project)
 ** openmoko.org
