/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -93,6 +93,8 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[OUI (Organizationally Unique Identifiers)]] || duplicate of [[OUI]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
 | [[Openmoko/de]], [[Openmoko/es]], [[Openmoko/fr]], [[Openmoko/it]], [[Openmoko/ru]], [[Openmoko/zh tw]] || Openmoko has already been deleted by [[User:Sean|Sean]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
+|-
+| [[Заглавная страница]] || incomplete translation, nothing links to this page || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 == DolfjeBot1 proposals ==
