*Empty MediaWiki Message*

--- a/Community_Repository.mw
+++ b/Community_Repository.mw
@@ -16,6 +16,9 @@ You can release your package with ipk file.
 ** Using OE
 ** [[Toolchain|Meta-toolchain]]
 
+= How to create your own repository =
+TBD
+
 == Package Tags ==
 If you want your package to be shown on [[Om2008.8_Installer |Installer]], please add tag message on your package. 
 {|
