--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -90,8 +90,8 @@ L'utente root di default non ha password. La prima cosa che si potrebbe voler fa
 La password sarà inserita, in forma criptata, nel file <tt>/etc/passwd</tt>.
 
 === Dare un nome al neonato ===
-Se l'hostname <tt>om-gta02</tt> non ci soddisfa, lo possiamo cambiare con
- # hostname <nuovo_nome>
+Se l'hostname <tt>om-gta02</tt> non ci soddisfa, lo possiamo cambiare andando ad editare il file di configurazione in questione con
+ # vi /etc/hostname
 
 === Sbloccare lo Schermo ===
 Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il simbolo di Openmoko nel centro della parte bassa dello schermo, assieme al simbolo di ''bloccato'' e ''sbloccato''. Se si trascina il simbolo di Openmoko fino alla cima dello schermo, verso il simbolo di ''sbloccato'', si sbloccherà lo schermo.
