Added two new codes

--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -9,6 +9,8 @@ Please edit this page, remove the number you used and add "I used this code" in 
 Here's the list
 * hxyqjk    (end date: unknown, issued on August 22nd)
 * s7bvna    (end date: unknown, issued on August 22nd)
+* cv9p8j    (end date: one-time-use, issued on August 23nd)
+* nd23bg    (end date: one-time-use, issued on August 23nd)
 
 Also, a 20%-off code . Can be reused.
 
