*Empty MediaWiki Message*

--- a/Samsung_S3C2442B.mw
+++ b/Samsung_S3C2442B.mw
@@ -76,3 +76,4 @@ In addition you need to make sure EN_USBHOST signal that enables the physical Ho
 
 [[Category:Used chip]]
 [[Category:Neo FreeRunner Hardware]]
+[[Category:Neo FreeRunner Hardware test]]
