*Empty MediaWiki Message*

--- a/NXP_PCF50633.mw
+++ b/NXP_PCF50633.mw
@@ -30,3 +30,4 @@
 * Connected to: [[Samsung_S3C2442B]] via I2C, client address is 0x08. <br>
 
 [[Category:Used chip]]
+[[Category:Neo FreeRunner Hardware Test]]
