--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -454,7 +454,10 @@ Another option is to plug the FR into a different USB port on the host, preferab
 
 Disconnecting the Neo's USB while powering up may prevent this problem in the future.
 
-See [[Flashing Openmoko]]
+== Related pages ==
+
+See [[Flashing Neo 1973]] and [[Flashing Freerunner]] for instructions on using dfu-util to install a new bootloader in your phone.
+
 
 
 [[Category:System Developers]]
