--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -456,9 +456,7 @@ Disconnecting the Neo's USB while powering up may prevent this problem in the fu
 
 == Related pages ==
 
-See [[Flashing Neo 1973]] and [[Flashing Freerunner]] for instructions on using dfu-util to install a new bootloader in your phone.
-
-
+See [[Flashing the Neo 1973]] and [[Flashing the Neo Freerunner]] for instructions on using dfu-util to install a new bootloader in your phone.
 
 [[Category:System Developers]]
 [[Category:Flashing Openmoko]]
