--- a/UMTS.mw
+++ b/UMTS.mw
@@ -3,7 +3,7 @@ From [http://en.wikipedia.org/wiki/UMTS Wikipedia UMTS]: '''Universal Mobile Tel
 The [[Neo 1973]] does not support UMTS.
 The [[Neo FreeRunner]] will not support UMTS.
 
-In [[Neo1973_compatible_cellphone_providers#Japan|Japan, only UMTS]] is available, no GSM network exists there. For this and other reasons, support for UMTS is very desirable. This can be accommodated in the device itself or externally with '''supported''' peripheral hardware via [http://en.wikipedia.org/wiki/UMTS#3G_Handsets_and_Modems UMTS tether mode] using USB, Bluetooh, WiFi or infrared. Here is also rumored that Apple will support UMTS with iPhone.
+In [[Neo1973_compatible_cellphone_providers#Japan|Japan, only UMTS]] is available, no GSM network exists there. For this and other reasons, support for UMTS is very desirable. This can be accommodated in the device itself or externally with '''supported''' peripheral hardware via [http://en.wikipedia.org/wiki/UMTS#3G_Handsets_and_Modems UMTS tether mode] using USB, Bluetooh, WiFi or infrared. The 2nd generation of Apple's iPhone (iPhone 3G) supports now UMTS, too.
 
 == Applications ==
 
