--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -11,7 +11,7 @@ __NOTOC__
 <div align="left">
 
 :*[[Openmoko Taiwan|Openmoko 台灣行銷]]
-:*新聞 2008-08-23:[[Openmoko Taiwan Openlab|Openmoko Openlab 移師清華大學]]
+:*[[Openmoko Taiwan Openlab|新聞 2008-08-23: Openmoko Openlab 移師清華大學]]
 </div>
 
 |}
