/* Pages capable of development */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -13,6 +13,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * [[Documentation]]
 * [[AGPSD]] (Needs new GPS info)
 * [[AR6K]] (Needs more info)
+* [[GTA02 partitions]]: seems to be about the GTA01; could someone with a GTA02 please correct the partition sizes and names?
 
 ===Redundant Pages===
 * There are several pages concerning Openmoko compatible service providers:
