--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -85,6 +85,8 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[Openmoko/de]], [[Openmoko/es]], [[Openmoko/fr]], [[Openmoko/it]], [[Openmoko/ru]], [[Openmoko/zh tw]] || Openmoko has already been deleted by [[User:Sean|Sean]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
 | [[Заглавная страница]] || incomplete translation, nothing links to this page || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Why Not QT]] and [[Talk:Why Not QT]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 == DolfjeBot1 proposals ==
