--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -87,6 +87,8 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[Заглавная страница]] || incomplete translation, nothing links to this page || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Why Not QT]] and [[Talk:Why Not QT]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[special]] || not translated, seems to be information about e-mail confirmation || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 == DolfjeBot1 proposals ==
