--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -55,9 +55,9 @@ Edit the USB section to look like this:
  	netmask 255.255.255.0
  	network 192.168.0.0
  	gateway 192.168.0.1
- 	up echo nameserver 208.67.222.222 >/etc/resolv.conf 
- 	up echo nameserver 208.67.220.220 >/etc/resolv.conf 
- 	#up echo nameserver 192.168.0.200 >/etc/resolv.conf
+ 	up echo nameserver 208.67.222.222 > /etc/resolv.conf 
+ 	up echo nameserver 208.67.220.220 >> /etc/resolv.conf 
+ 	#up echo nameserver 192.168.0.200 > /etc/resolv.conf
 
 ==== Unofficial (zechke) Updates ====
 
