--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -100,11 +100,11 @@ Quando lo schermo è bloccato, vedrai una grafica verde in stile Matrix con il s
 
 ''Nota:'' questa sezione descrive l'interfaccia utilizzata dall'immagine "2007.2", che è correntemente l'immagine predefinita Openmoko.
 
-====Schermata Oggi====
+==== Schermata Oggi ====
 [[Image:Todaypage_reduced_false.png|right|200px|]]
-La prima cosa che vi apparirà dopo aver fatto partire l'Openmoko è la pagina "Oggi". Questa è la vostra pagina principale. Sulla riga in alto, troverete le icone che indicano lo stato del vostro telefono. In seconda riga ci sono dei collegamenti alle applicazioni più usate, come il tastierino numerico per le chiamate. Il corpo principale della schermata è la vostra schermata principale, con un orologio in mezzo e con altre informazioni utili. La riga in basso è composta da tre linguette che rappresentano le schermate Oggi(quella che stiamo visualizzando ora), schermata di Avvio delle Applicazioni e la schermata dei Processi in Esecuzione.
+La prima cosa che vi apparirà dopo aver fatto partire l'Openmoko è la pagina "Oggi". Questa è la vostra pagina principale. Sulla riga in alto, troverete le icone che indicano lo stato del vostro telefono. In seconda riga ci sono dei collegamenti alle applicazioni più usate, come il tastierino numerico per le chiamate. Il corpo principale della schermata è la vostra schermata principale, con un orologio in mezzo e con altre informazioni utili. La riga in basso è composta da tre linguette che rappresentano le schermate Oggi (quella che stiamo visualizzando ora), schermata di Avvio delle Applicazioni e la schermata dei Processi in Esecuzione.
 
-Si veda [[Today/2007.2/it]] per maggiori informazioni a riguardo della schermata Oggi e sulla sua personalizzazione.<br clear=all />
+Si veda [[Today/2007.2/it]] per maggiori informazioni a riguardo della schermata Oggi e sulla sua personalizzazione.
 
 ====Schermata per l'Avvio delle Applicazione====
 
