--- a/Today%2F2007.2%2Fit.mw
+++ b/Today%2F2007.2%2Fit.mw
@@ -21,7 +21,7 @@ Di seguito potete trovare alcune casistiche di possibile utilizzo:
 * '''Visualizzazione dei Gestori di rete'''
 * ''Panoramica delle chiamate perse e dei messaggi non letti''
 * ''Panoramica degli eventi futuri, attività e allarmi''
-* '''Bloccare il telefono per prevenire la pressione accidentale del touch-screen'''
+* ''Bloccare il telefono per prevenire la pressione accidentale del touch-screen''
 * ''Lanciare una delle applicazioni chiave''
 * ''Lanciare il Dialer per visualizzare le chiamate perse''
 * ''Lanciare l'applicazione Messaggi per visualizzare i messaggi non letti''
