googlemaps with tangogps

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -84,3 +84,8 @@ There are steps included in those instructions to improve GPS performance.  The 
 
 TangoGPS is able to record and store a track in its native format, and tools exist to convert this to GPX.
 However, TangoGPS does not support the import of tracks. You may help yourself by using [http://relet.net/frog/archives/68 this tool] to import GPX trackpoints as a series of POIs directly into the sqlite database which tangoGPS uses to store POIs.
+
+
+== Using Google Maps with TangoGPS ==
+
+Go to Config and change the url to http://mt1.google.com/mt?&x=%d&y=%d&zoom=%d and check the "Inverted Zoom" box. Press save Repository Configuration and you're ready to go.
