Replacing '{{Gta02menu}}' with '{{Neo FreeRunner Menu}}'

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -1,4 +1,4 @@
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 This is a community-written page that discusses '''hardware issues''' with the Freerunner/[[GTA02]] device. Information here is unofficial (and possibly incorrect) unless otherwise stated. Corrections and clarifications from Openmoko employees would be greatly appreciated.
 
