--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -18,18 +18,12 @@ General phone users will eventually appreciate the high spec and performance of 
 
 == Specifications ==
 
-The specs share some features with the previous [[Neo1973]] such as:
-
 * A very high resolution touch screen (1.7" x 2.27" - 43mm x 58mm) 480x640 pixels
 * 128MB SDRAM memory to allow operation of many applications at once
-* Internal GPS module for map and tracking programs
+* Internal [[Neo FreeRunner GPS|GPS]] module for map and tracking programs
 * Bluetooth for local data exchange
-* Physical appearance will be the same as the Neo1973. See openmoko.com for more.
-
-With the following additional features:
-
-* 802.11 b/g WiFi for fast web browsing and data transfer
-* A faster 400Mhz processor (up from 266MHz)
+* 802.11 b/g [[Neo FreeRunner Wifi|WiFi]] for fast web browsing and data transfer
+* A faster 400Mhz processor
 * 2 3D accelerometers so that the phone can know its orientation for example switching to landscape mode automatically
 * 2 LEDs illuminating the two buttons on the rim of the case (one bi color [blue|orange] behind the power button, 1 uni color [red] behind the aux button)
 * Tri-band GSM and GPRS for North America (850/1800/1900 Mhz) and the rest of the world (900/1800/1900 Mhz)
