--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -1,5 +1,5 @@
 {{Languages|Neo FreeRunner}}
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 The '''Neo FreeRunner''' (internal codename [[GTA02 revisions|GTA02]]) is the second phone designed to run Openmoko software and is the direct descendant of the earlier [[Neo 1973]]. Hardware specs are at [[Neo FreeRunner Hardware]].
 
