Replacing '{{Gta02menu}}' with '{{Neo FreeRunner Menu}}'

--- a/Neo_FreeRunner%2Fcs.mw
+++ b/Neo_FreeRunner%2Fcs.mw
@@ -1,5 +1,5 @@
 {{Languages|Neo FreeRunner}}
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 '''Neo FreeRunner''' (vnitří označení GTA02) je druhým telefonem na kterém běží Openmoko software. Je to přímý potom mladšího [[FIC]] [[Neo1973]]. Spacifikace hardware [[Neo FreeRunner GTA02 Hardware]].
 
