--- a/Neo_FreeRunner%2Ffr.mw
+++ b/Neo_FreeRunner%2Ffr.mw
@@ -1,5 +1,5 @@
 {{Languages|Neo FreeRunner}}
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 Le Neo FreeRunner (nom de code interne: GTA02) est le second téléphone conçu pour tourner avec le logiciel Openmoko et qui est le descendant directe du [[FIC]] [[Neo1973]]. Les spécifications hardware peuvent être trouvées sur [[Neo FreeRunner GTA02 Hardware]].
 
