Replacing '{{Gta02menu}}' with '{{Neo FreeRunner Menu}}'

--- a/Neo_FreeRunner%2Fit.mw
+++ b/Neo_FreeRunner%2Fit.mw
@@ -3,7 +3,7 @@ __NOTOC__
 __NOEDITSECTION__
 
 Il Neo FreeRunner (soprannome interno GTA02) è il secondo telefono progettato per funzionare con il software Openmoko ed è il diretto discendente del precedente [[FIC]] [[Neo1973]].    Le specifiche hardware sono [[Neo FreeRunner GTA02 Hardware/it|qui]].
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 == Usi e utenza prevista ==
 Il Neo FreeRunner è uno smart phone con touch screen basato su GNU/Linux rivolto a utilizzatori principali come gli utenti di desktop GNU/Linux e gli sviluppatori di software GNU/Linux.
