Replacing '{{Gta02menu}}' with '{{Neo FreeRunner Menu}}'

--- a/Neo_FreeRunner%2Fru.mw
+++ b/Neo_FreeRunner%2Fru.mw
@@ -3,7 +3,7 @@ __NOTOC__
 __NOEDITSECTION__
 
 Neo FreeRunner (внутреннее кодовое имя GTA02) это второй телефон, разработанный для запуска программного обеспечения Openmoko и прямой потомок предшествующего [[FIC]] [[Neo1973]].    Аппаратная спецификация доступна [[Neo FreeRunner GTA02 Hardware/ru|здесь]].
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 == FreeRunner выпущен на рынок!==
 
