Replacing '{{Gta02menu}}' with '{{Neo FreeRunner Menu}}'

--- a/Neo_FreeRunner_Wifi.mw
+++ b/Neo_FreeRunner_Wifi.mw
@@ -1,4 +1,4 @@
-{{Gta02menu}}
+{{Neo FreeRunner Menu}}
 
 This page documents the [http://en.wikipedia.org/wiki/Wireless_networking wireless networking] solutions commonly known as [http://en.wikipedia.org/wiki/Wireless_LAN WLAN] or WiFi. 
 
