*Empty MediaWiki Message*

--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -1,20 +1,12 @@
 {{Languages|Neo FreeRunner}}
 {{Neo FreeRunner Menu}}
 
-The '''Neo FreeRunner''' (internal codename [[GTA02 revisions|GTA02]]) is the second phone designed to run Openmoko software and is the direct descendant of the earlier [[Neo 1973]]. Hardware specs are at [[Neo FreeRunner Hardware]].
+The '''Neo FreeRunner''' (internal codename [[GTA02 revisions|GTA02]]) is the second phone designed to run Openmoko software and is the direct descendant of the earlier [[Neo 1973]].
 
 == FreeRunner is released! ==
 [[Image:Freerunner02.gif|200px|right]]
 
 The FreeRunner can be purchased from the [http://www.openmoko.com Online Store] as of July 3, 2008. The software available on the phone makes it suitable for power users and developers only, it is not ready for the general consumer yet. Email announcements and found on the [http://lists.openmoko.org/mailman/listinfo/announce announce mailing list]. For frequently asked questions please check [[FAQ]] and [[GTA02_FAQ|GTA02 FAQ]].
-
-== Intended use and users ==
-
-The Neo FreeRunner is a Linux-based touch screen smart phone ultimately aimed at general consumer use as well as Linux desktop users and software developers.
-
-Linux users and software developers will appreciate the total freedom they have to use and design software for the FreeRunner.
-
-General phone users will eventually appreciate the high spec and performance of the phone and the wide range of free software packages expected to emerge. These will allow users to make the maximum use of the hardware and tailor it to their particular needs. Since launch, the pace of software tweaks and improvements has increased as both the Openmoko team developers and the wider community work together.
 
 == Specifications ==
 
@@ -23,19 +15,30 @@ General phone users will eventually appreciate the high spec and performance of 
 * Internal [[Neo FreeRunner GPS|GPS]] module for map and tracking programs
 * Bluetooth for local data exchange
 * 802.11 b/g [[Neo FreeRunner Wifi|WiFi]] for fast web browsing and data transfer
-* A faster 400Mhz processor
+* A 400Mhz processor
 * 2 3D accelerometers so that the phone can know its orientation for example switching to landscape mode automatically
 * 2 LEDs illuminating the two buttons on the rim of the case (one bi color [blue|orange] behind the power button, 1 uni color [red] behind the aux button)
 * Tri-band GSM and GPRS for North America (850/1800/1900 Mhz) and the rest of the world (900/1800/1900 Mhz)
 * USB Host function with 500mA power allowing you to power USB devices for short periods (will drain the FreeRunner battery faster)
 
+'''Beware''': There are two versions of the phone. One that work on GSM bands of North America and on that will work on the bands in the rest of the world. Beware that The Neo FreeRunner bought from a reseller in Europe will most likely not work in North America. And vice versa.
+
 A full list of the hardware specs and components of the Neo FreeRunner (internal codename [[GTA02 revisions|GTA02]]) can be found at [[Neo FreeRunner GTA02 Hardware]].
 
 A comparison between [[Neo 1973]] and Neo FreeRunner is available at [[Neo 1973 vs Neo FreeRunner]].
 
+
 == What is the price? ==
 
 The device is being sold through multiple channels (including [http://www.openmoko.com Openmoko.com]), the official price has been set to 399$ but it could slightly vary in some countries (due to taxes).
+
+== Intended use and users ==
+
+The Neo FreeRunner is a Linux-based touch screen smart phone ultimately aimed at general consumer use as well as Linux desktop users and software developers.
+
+Linux users and software developers will appreciate the total freedom they have to use and design software for the FreeRunner.
+
+General phone users will eventually appreciate the high spec and performance of the phone and the wide range of free software packages expected to emerge. These will allow users to make the maximum use of the hardware and tailor it to their particular needs. Since launch, the pace of software tweaks and improvements has increased as both the Openmoko team developers and the wider community work together.
 
 == How usable is it? ==
 
