/* JTAG using FT2232 */

--- a/Debug_Board_v3.mw
+++ b/Debug_Board_v3.mw
@@ -41,7 +41,7 @@ For the ISB hub function, we use the TUSB2046B chip.
 
 === JTAG using FT2232 ===
 
-Basically, we integrate a USB-JTAG adaptor similar to the [Amontec JTAGkey-tiny].  The actual reference design that we used (Thanks to Joern!) can be found at http://www.oocdlink.com
+Basically, we integrate a USB-JTAG adaptor similar to the [Amontec JTAGkey-tiny].  The actual reference design that we used (Thanks to Joern!) was found at http://www.oocdlink.com (but the domain has gone).
 
 This provides us full JTAG debugging, at about 150times the speed of the [[wiggler]]
 
