--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -16,8 +16,7 @@ Any problems with the software below should be reported to the individual softwa
 Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to standard Webkit based browser. 
 
 === GPS ===
-'''[[TangoGPS]]'''<br>
-gps and map program
+{{main|GPS applications}}
 
 === Other ===
 '''[[Mokopedia]]'''<br>
