--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -1,9 +1,45 @@
 {{Applications}}
-== Possible GPS applications ==
 
-As people develop more sophisticated GPS applications, please note them here.
+== Official software ==
+[[Om2008.8_Locations|Locations]] <br>
+for the distribution [[Om 2008.8]]
 
-=== Use cases ===
+[[Howto_Test_Your_GPS_with_agpsui|Openmoko AGPS UI project]]
+
+== Community Applications ==
+=== Applications software ===
+
+[http://www.kflog.org/cumulus/ Cumulus] <br>
+GPS software for glider pilots (and pilots in general), has a port for Qtopia and pulls (world) maps from the KFLog flight planner project. I think someone has put a project like this on the projects website.
+
+[[Pyroute]] <br>
+is a routing program written in Python by Ojw, and a mobile phone GUI for maps, GPS, and routing.
+
+[http://wiki.openstreetmap.org/index.php/Gosmore Gosmore]<br>
+is a routing and viewer of OSM XML data such as the planet.osm.
+
+[[GPS Sight]], <br>
+a popular Openmoko project under LGPL.
+
+[[GPS-Trail]] <br>
+a simple trail logger.
+
+[[Navit]] <br>
+a car navigation system with routing engine.
+
+[[Orrery]], <br>
+an Openmoko project for displaying the night sky.
+
+[[qpegps]] <br>
+qtopia (arm PDA) based map viewer with gps features
+
+[[QMapControl]] <br>
+Qtopia based mapping widget. Displays maps and custom data, also other widgets can be bound to coordinates. GPS parser for the gllin output included.
+
+[[TangoGPS]] <br>
+mapping program. Downloads maps on demand and caches them, very efficient. '''Works very well.'''
+
+== Use cases ==
 
 * I want to look at maps. 
 * I want to be able to prepare data and load my own maps.
@@ -15,22 +51,3 @@ As people develop more sophisticated GPS applications, please note them here.
 * I want the GPS to update profile settings based on my location. Example, mute the phone ringer when I am at work.
 * I want to log GPS data for later analysis. [[GPS Data Logger]]
 * I want to collect GPS data for scientific field work (forestry, biology, etc)
-
-=== Applications software ===
-
-'''Please note if a program works or if it's vapourware.'''
-
-* Cairo-based mapping (I wonder what this is?)
-* [http://www.kflog.org/cumulus/ Cumulus] GPS software for glider pilots (and pilots in general), has a port for Qtopia and pulls (world) maps from the KFLog flight planner project. I think someone has put a project like this on the projects website * [http://wiki.openstreetmap.org/index.php/Pyroute Pyroute] is a routing program written in Python by Ojw, and a mobile phone GUI for maps, GPS, and routing.
-:* [http://wiki.openstreetmap.org/index.php/Rana Ran&aacute;] is the new version of pyroute
-* [http://wiki.openstreetmap.org/index.php/Gosmore Gosmore] is a routing and viewer of OSM XML data such as the planet.osm.
-* [[GPS Sight]], a popular Openmoko project under LGPL.
-* [[GPS-Trail]] a simple trail logger.
-* [[GPS_Navigation#roadmap|roadmap]] mapping system using freely available maps (US census TIGER, DGLib, shapefiles).
-* [[Navit]] a car navigation system with routing engine.
-* [http://svn.projects.openmoko.org/svnroot/openmoko-agpsui Openmoko AGPS UI project].
-* [[Orrery]], an Openmoko project for displaying the night sky.
-* [[qpegps]] qtopia (arm PDA) based map viewer with gps features
-* [[QMapControl]] Qtopia based mapping widget. Displays maps and custom data, also other widgets can be bound to coordinates. GPS parser for the gllin output included.
-[http://projects.openmoko.org/projects/openvario/ here].
-* [[TangoGPS]] mapping program. Downloads maps on demand and caches them, very efficient. '''Works very well.'''
