*Empty MediaWiki Message*

--- a/Pyroute.mw
+++ b/Pyroute.mw
@@ -1,3 +1,5 @@
+{{application|Pyroute}}
+
 == Installing ==
 Cribbed from [http://lists.openmoko.org/pipermail/openmoko-devel/2007-November/001734.html the mailing list], with some modifications that I had to make for it to work on my neo1973.
 
