--- a/Qpegps.mw
+++ b/Qpegps.mw
@@ -1,3 +1,5 @@
+{{application|Qpegps}}
+
 qpeGPS is a program for displaying a moving map centered at the position read from a GPS device. It's designed to run on a PDA with Qt/embedded (qtopia)
 
 Possible disadvantage of this solution is, that  map files as gif or png are needed.
