*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,4 +1,3 @@
-
 __NOTOC__
 __NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo Freerunners]]
 
@@ -50,11 +49,13 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 * [[Getting Started FAQ]]
 
 ===<font color=white>Software</font>===
+* [[Applications]]
 * [[Distributions|Openmoko software distributions]]
-* [[Om 2007.2|2007.2 distribution]]
-* [[Om 2008.8|2008.8 distribution]]
-* [[OpenmokoFramework|FSO distribution]]
-* [[Qtopia_on_FreeRunner|Qtopia distribution]]
+** [[Om 2007.2|2007.2 distribution]]
+** [[Om 2008.8|2008.8 distribution]]
+** [[OpenmokoFramework|FSO distribution]]
+** [[Qtopia_on_FreeRunner|Qtopia distribution]]
+** [[Debian|Debian distribution]]
 
 ===<font color=white>Openmoko community</font>===
 * [[Discussion_Forums| Discussion Forums]]
