--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -89,3 +89,4 @@ However, TangoGPS does not support the import of tracks. You may help yourself b
 == Using Google Maps with TangoGPS ==
 
 Go to Config and change the url to http://mt1.google.com/mt?&x=%d&y=%d&zoom=%d and check the "Inverted Zoom" box. Press save Repository Configuration and you're ready to go.
+:Automated map download will most certainly fail, as Google is very keen on keeping leechers out.
