--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -1,6 +1,8 @@
 {{Languages|TangoGPS}}
 {{Application|TangoGPS}}
 
+__TOC__
+
 TangoGPS is a map application which can utilize Neo's built-in GPS to show your current location.
 
 [[Image:TangoGPS1.jpg]]
