/* Unofficial (zechke) Updates */

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -59,7 +59,7 @@ Edit the USB section to look like this:
  	up echo nameserver 208.67.220.220 >> /etc/resolv.conf 
  	#up echo nameserver 192.168.0.200 > /etc/resolv.conf
 
-==== Unofficial (zechke) Updates ====
+==== Unofficial (zecke) Updates ====
 
 Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typo: Remove the duplicate "/" before Multiverse. 
 
