--- a/Distributions.mw
+++ b/Distributions.mw
@@ -134,19 +134,19 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | Terminal || Basic (2) || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| PIM || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| PIM || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes(1)
 |-
-| Phonebook || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Phonebook || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes(1)
 |-
-| Dialer || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Dialer || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes(1)
 |-
-| Web Browser || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes (1) || ? || No || style="background:lightgreen;" | Yes
+| Web Browser || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes (1) || ? || No || style="background:lightgreen;" | Yes(1)
 |-
-| Mail Client || ? || ? || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Mail Client || ? || ? || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes(1)
 |-
-| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes [[IM#Implementation_Recommendations|(1)]] || ? || No || style="background:lightgreen;" | Yes
+| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes [[IM#Implementation_Recommendations|(1)]] || ? || No || style="background:lightgreen;" | Yes(1)
 |-
-| Media Player || style="background:lightgreen;" | Yes || ? || ? || ? || ? || ? 
+| Media Player || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes(1) || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes(1) 
 |-
 |}
 
