*Empty MediaWiki Message*

--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -11,6 +11,7 @@ __NOTOC__
 <div align="left">
 
 :*[[Openmoko Taiwan|Openmoko 台灣行銷]]
+:*[[http://pixnet.net/openmoko Openmoko 台灣相簿]]
 :*[[Openmoko Taiwan Openlab|2008-08-23: Openmoko Openlab 進駐清華大學]]
 </div>
 
