*Empty MediaWiki Message*

--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -1,4 +1,3 @@
-{{Languages|Main Page}}
 __NOTOC__
 __NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo Freerunners]]
 
@@ -50,10 +49,11 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 
 ===<font color=white>Software</font>===
 * [[Distributions|Distribuciones Openmoko]]
-* [[OpenmokoFramework|Distribución FSO]]
-* [[Om_2007.2/es|Distribución 2007.2]]
-* [[Om_2008.8/es|Distribución 2008.8]]
-* [[Qtopia_on_FreeRunner|Distribución Qtopia]]
+** [[Om_2007.2/es|Distribución 2007.2]]
+** [[Om_2008.8/es|Distribución 2008.8]]
+** [[OpenmokoFramework|Distribución FSO]]
+** [[Qtopia_on_FreeRunner|Distribución Qtopia]]
+** [[Debian|Distribución Debian ]]
 
 ===<font color=white>Comunidad Openmoko</font>===
 * [[Discussion_Forums| Fora ]]
@@ -80,3 +80,4 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 </table>
 
 [[Category:Information| ]]
+{{Languages|Main Page}}
