--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -17,7 +17,7 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 <td>
 * 15/8: Debian en FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html comunicado], [http://wiki.debian.org/DebianOnFreeRunner instrucciones].
 * 8/8: Lanzamiento oficial de [[Openmoko2008.8]] [http://lists.openmoko.org/pipermail/community/2008-August/024715.html]
-* 4-5/8: Openmoko esta en el Linuxworld, San Francisco
+* 4-5/8: Openmoko esta en el Linuxworld, San Francisco .[http://www.youtube.com/watch?v=jWJjNF36DfI Video].
 * 30/7: Lanzamiento de la distribuicion FSO [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
 * 25/7: La Comunidad al rescate, [[GPS Problems| Problemas con GPS]] resueltos
 * 20/7: [[Debian]] a la pagina de distribuciones
