minor spelling updates

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -14,10 +14,10 @@ Compared to 2007.2 that has a longer development history, Om 2008.8 is definitel
 The main user-visible changes:
 
 * The user interface has been fully revised with a new windows manager [[illume]]. It is visually much richer, and can be customized further by using your own [[Edje]] files.
-* '''[[Om2008.8_Installer|A graphical installer]]''' allows to add easily new applications, themes and functionalities.
+* '''[[Om2008.8_Installer|A graphical installer]]''' allows to add easily new applications, themes and functionality.
 * A new [[Om2008.8_Locations|Locations]] application is provided, to save your favorite spots and share them with friends via sms.
 * Power management has been improved: The Aux button now locks the screen, the Power button suspends and the red LED behind the Aux button lights up when charging.
-* The [[Om2008.8_Keyboard| keyboard]] is now the Qtopia one (wether this is an improvement has been hotly debated).
+* The [[Om2008.8_Keyboard| keyboard]] is now the Qtopia one (whether this is an improvement has been hotly debated).
 
 For developers, the main changes are:
 * Multiple toolkits: '''Om 2008.8''' supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
@@ -101,7 +101,7 @@ This should solve most of your moko side networking issues. If you need any othe
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used 
 
-'''Problem''': parts of resolvconf are missing:  without the scripts under /etc/network/if-{up,down}.d, and /etc/resolvconf/run/enable-updates and /lib/resolvconf/list-records it does nothing, and even then, /etc/resolvconf/run should probably be a symlink to /var/run, or /etc/resolv.conf needs to be pointed at /etc/resolvconf/run/resolv.conf -- once all that's done, it seems to work as long as you add somehting like this to /etc/network/interfaces at the end of the usb0 stanza:
+'''Problem''': parts of resolvconf are missing:  without the scripts under /etc/network/if-{up,down}.d, and /etc/resolvconf/run/enable-updates and /lib/resolvconf/list-records it does nothing, and even then, /etc/resolvconf/run should probably be a symlink to /var/run, or /etc/resolv.conf needs to be pointed at /etc/resolvconf/run/resolv.conf -- once all that's done, it seems to work as long as you add something like this to /etc/network/interfaces at the end of the usb0 stanza:
 
     dns-nameservers 192.168.0.200
     dns-search example.com
