--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1163,10 +1163,11 @@ Get carriers to give you an Openmoko like they will give away other phones when 
 * "Geomark" function: if you have to save the current time with your current location, only hit one button...
 ** You also should be able to navigate with a small "compass" and the distance should be displayed to your saved point (maybe where you parked your car on a big car parking area)...
 * '''Measure the distance between two points (air line or walked way) -> no need for a tape measure'''
-**I think it would be good if you could either use Bluetooth, GPRS or AdHoc Wifi, and see near Neo1972 on the GPS map so you could see where your friends are, e.g "You want to know if you friend is on the bus behind" You would need a strong wifi and GPRS would be too expensive.
+**I think it would be good if you could either use Bluetooth, GPRS or AdHoc Wifi, and see near Neo1973 on the GPS map so you could see where your friends are, e.g "You want to know if you friend is on the bus behind" You would need a strong wifi and GPRS would be too expensive.
 *A bicycle sat-nav would be cool, speciayl designed for bicycles, e.g. cycle routes
 * A user friendly app to collect data for the open street map project. http://www.openstreetmap.org/
 * '''GPS proxy''' - allowing other people to use and share GPS data from NEO over bluetooth  {{Main|Wishlist:Software:GPS proxy}} 
+* Location-based ToDo reminders. The GPS system allows for locations to be tagged (e.g. Parents' House, Pharmacy). The ToDo list should allow each item to be tagged with one ot more locations where the objective can be performed. When at or near that location the user would be presented with a reminder. For example when driving to my parents' house my Openmoko phone would see that I am near the pharmacy I tagged as a location and remind me of the "Pick up toothpaste" item on my ToDo list. Then, when at my parents' house my Openmoko phone would remind me of the "Pickup DVD from parents" item on my ToDo list.
 <br>[[Community Based Traffic Information]]
 
 == Hardware ==
