/* Menstruation period timer */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -399,6 +399,7 @@ A background application which keeps track of your friends and reminds you when 
 ==== Menstruation period timer ====
 Fill in statistics and compute probabilities for menstruation, fertility, mood.
 See http://www.getjar.com/products/48/MyGirls
+I second this one. It would be good to know when to be extra nice.
 
 ==== Tagging ====
 {{Main|Wishlist:Tagging}}
