/* Using the mouse and keyboard from your desktop on the OM device */ added hint about apt-get install xauth

--- a/Debian.mw
+++ b/Debian.mw
@@ -148,11 +148,19 @@ In K/Ubuntu sshd is in the package openssh-server.
 
 On your OM device install x2x (with root permissions)
  apt-get install x2x
-Now open a new X terminal on your desktop computer. You MUST be the same user that is running the xsession on your desktop (i.e. do not su to root or another user in your x terminal!). On your OM device you should be running an xsession as the user openmoko. Assuming that you have a usb networking connection to OM (with standard configuration) on the user prompt of your desktop type:
+Now open a new X terminal on your desktop computer. You MUST be the same user that is running the xsession on your desktop (i.e. do not su to root or another user in your x terminal!). Use the same username that is running an xsession on your OM device. Assuming that you have a usb networking connection to OM (with standard configuration) on the user prompt of your desktop type:
  user@desktop:~$ ssh -X openmoko@192.168.0.202 "/usr/bin/x2x -east -to :0.0"
 Hit return and enter your password. The xterm window will be unresponsive after that, but keep it open until you disconnect your OM device.
 
 Now move your mouse cursor across the right edge of your monitor. It should enter the screen of your OM device from the left. Of course you can also use -west, -north or -south, depending on your preference where you place your OM.
+
+If computer says:
+ sh: /usr/X11R6/bin/xauth: No such file or directory
+ X11 connection rejected because of wrong authentication.
+ x2x - error: can not open display localhost:11.0
+
+It means you haven't istalled xauth on your OM. So on your OM (with root permissions)
+ apt-get install xauth 
 
 [[Category:Distributions| ]]
 [[Category:Documentation]]
