described another bug

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -150,6 +150,14 @@ seconds to show the constellations.   This only
 happens the first time - subsequent switches
 are pretty fast (< 1 second).
 
+Ooops - I didn't remove some emacs backup files from
+the earlier 2007.2 .ipk file.   The only visible
+effect of this that the name of the constellation
+Orion will be typed twice, slightly displaced from each
+other, one with a tilda following it.   You can fix
+that by removing the file
+/usr/share/orrery/constellations/Orion~ .
+
 '''Send more bug reports!'''
 
 == Revision(ist) History ==
