more info on a minor bug

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -151,12 +151,14 @@ happens the first time - subsequent switches
 are pretty fast (< 1 second).
 
 Ooops - I didn't remove some emacs backup files from
-the earlier 2007.2 .ipk file.   The only visible
+my first .ipk files.   The only visible
 effect of this that the name of the constellation
 Orion will be typed twice, slightly displaced from each
-other, one with a tilda following it.   You can fix
+other, one with a tilda (~) following it.   You can fix
 that by removing the file
-/usr/share/orrery/constellations/Orion~ .
+/usr/share/orrery/constellations/Orion~ . This problem
+was fixed on the 1.1.1 .ipk file for 2007.2, and the
+1.1.2 .ipk file for 2008.8 .
 
 '''Send more bug reports!'''
 
