Add subsections for individual bugs

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -144,12 +144,14 @@ opkg the latest .ipk file with 2007.2 in its name from here:
 [http://projects.openmoko.org/projects/orrery/].
 
 == Known Bugs ==
+=== Slow Display of Constellations ===
 The first time you tap the display
 to go into constellation mode, it takes several
 seconds to show the constellations.   This only
 happens the first time - subsequent switches
 are pretty fast (< 1 second).
 
+=== Blurry Orion Label ===
 Ooops - I didn't remove some emacs backup files from
 my first .ipk files.   The only visible
 effect of this that the name of the constellation
