/* Software */ +Pootle, +gedit

--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -25,9 +25,9 @@ Plaese start at these pages. Or you can add the page you think is important.
 Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
 
 == Software ==
-There are specialised tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ...
+There are specialised tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ... [http://translate.sourceforge.net/wiki/pootle/index Pootle] can host several projects and languages to coordinate translation activities, and allow online translation.
 
-Most of text editors will fit also: vim, emacs, ed ...
+Most of text editors will fit also: vim, emacs, ed, gedit ...
 
 == Updating source tree ==
 {{todo|descript SVN update after editing}}
