*Empty MediaWiki Message*

--- a/Pyroute.mw
+++ b/Pyroute.mw
@@ -21,3 +21,4 @@ Unfortunately, it takes a very long time to come up the first time, and some but
 [[Category:Technical]]
 [[Category:Software (non openmoko)]]
 [[Category:Documentation]]
+[[Category:GPS]]
