--- a/Qpegps.mw
+++ b/Qpegps.mw
@@ -7,5 +7,5 @@ Possible disadvantage of this solution is, that  map files as gif or png are nee
 see http://sourceforge.net/projects/qpegps/
 
 [[Category:Openmoko]]
-[[Category:Application Developer]]
+[[Category:Applications]]
 [[Category:GPS]]
