/* Wiki Pages */ Made 'Categories' a top level item

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -34,34 +34,6 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * [[Wishlist:Text Input]] - tidy up/sort, give short feedback to each method
 * [[Booting_from_SD]] - tidy up and a rewrite
 
-===Categories ===
-
-These Pages are now implemented as categories, thus the unmaintaned pages could be removed. - Kempelen
-* [[Advanced_End-user]]: use [[:Category:User]] instead
-* [[Basic_End-user]]: use [[:Category:User]] instead
-* [[System_Developer]]: use [[:Category:System_Developers]] instead
-* [[Application_Developer]]: use [[:Category:Application_Developer]] instead
-
-===Too general category names===
-
-These end up in mixed content. They could be removed and content migrated to more specific category names.
-
-{| border="1"
-!Category to delete
-!Yes votes
-!No votes
-|-
-|[[:Category:Documentation]] || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
-|-
-| [[:Category:Information]] || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
-|-
-| [[:Category:Openmoko]](1) || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
-|-
-| [[:Category:Technical]]  || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
-|}
-
-(1) We've moved Openmoko Inc related info from Openmoko to a new Openmoko Inc category. This was the original aim of the Openmoko category when it was created.
-
 === Pages proposed for deletion ===
 
 {| border=1 cellspacing=0
@@ -90,6 +62,36 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 |[[special]] || not translated, seems to be information about e-mail confirmation || [[User:Marko Knöbl|Marko Knöbl]]
 |}
+
+
+==Categories ==
+
+===Pages now implemented as categories===
+These Pages are now implemented as categories, thus the unmaintaned pages could be removed. - Kempelen
+* [[Advanced_End-user]]: use [[:Category:User]] instead
+* [[Basic_End-user]]: use [[:Category:User]] instead
+* [[System_Developer]]: use [[:Category:System_Developers]] instead
+* [[Application_Developer]]: use [[:Category:Application_Developer]] instead
+
+===Too general category names===
+
+These end up in mixed content. They could be removed and content migrated to more specific category names.
+
+{| border="1"
+!Category to delete
+!Yes votes
+!No votes
+|-
+|[[:Category:Documentation]] || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[:Category:Information]] || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[:Category:Openmoko]](1) || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[:Category:Technical]]  || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+|}
+
+(1) We've moved Openmoko Inc related info from Openmoko to a new Openmoko Inc category. This was the original aim of the Openmoko category when it was created.
 
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
