/* =General issues with categories */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -66,7 +66,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 
 ==Categories ==
 
-===General issues with categories==
+===General issues with categories===
 * Please read wikipedia [http://en.wikipedia.org/wiki/Wikipedia:Categorization Categorization] page and [http://en.wikipedia.org/wiki/Wikipedia:FAQ/Categorization FAQ]
 * There are way too many categories.
 * There should be a small number of a orthogonal category trees, each describing one consistent conceptual taxonomy. Pages can fit in multiple categories.
@@ -76,7 +76,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * A taxonomy of technical level of expertise "General public", "Beginners", "Users", "Experts".
 [[User:MinhHaDuong|MinhHaDuong]] 10:47, 24 August 2008 (UTC)
 
-===Pages now implemented as categories===
+===Lists now implemented as categories===
 These Pages are now implemented as categories, thus the unmaintaned pages could be removed. - Kempelen
 * [[Advanced_End-user]]: use [[:Category:User]] instead
 * [[Basic_End-user]]: use [[:Category:User]] instead
