/* General issues with categories */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -68,12 +68,13 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 
 ===General issues with categories===
 * Please read wikipedia [http://en.wikipedia.org/wiki/Wikipedia:Categorization Categorization] page and [http://en.wikipedia.org/wiki/Wikipedia:FAQ/Categorization FAQ]
-* There are way too many categories.
+* There are way too many [[Special:Categories| categories]].
 * There should be a small number of a orthogonal category trees, each describing one consistent conceptual taxonomy. Pages can fit in multiple categories.
 * Categories should not include language.
 * There should be only one category taxonomy for the "Neo type" with subcategories "FreeRunner", "Neo1973", "GTA03"... Otherwise, categories should not include the Neo type.
-* Another obvious taxonomy can be based on the layers model. "Hardware", "Drivers", "Operating system", "Framework", "Applications".
+* Another big taxonomy can be based on the layers model. "Hardware", "Drivers", "Operating system", "Framework", "Applications". With many subcategories here.
 * A taxonomy of technical level of expertise "General public", "Beginners", "Users", "Experts".
+* A taxonomy by function or by subsystem: "Phone", "Wifi", "GPS", "USB", "Accels"
 [[User:MinhHaDuong|MinhHaDuong]] 10:47, 24 August 2008 (UTC)
 
 ===Lists now implemented as categories===
