--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -48,14 +48,14 @@ Scarica l'immagine FLASH di Qtopia da [[Latest Images#Qtopia image from qtopia.n
 Dovresti trovarti con due files: 
 #uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin
 #qtopia-4.3.2-gta02-rootfs-07172049.jffs2  
-Now extract the root file system from the jffs2 using the commands found [[Userspace root image#Mounting the JFFS2 image on a loop back device (Block Memory MTD Emulation) |here]].
+Ora estrai il root filesystem dal file jffs2 usando il comando che trovi [[Userspace root image#Mounting the JFFS2 image on a loop back device (Block Memory MTD Emulation) |qui]].
 
   
-Now, tar up the root filesystem:
+Ora scampatta e decomprimi il root filesystem:
 
   tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint> .
 
-Where ''<mountpoint>'' is the location where the jff2 filesystem was mounted.
+Dove ''<mountpoint>'' è la directory di dove il filesystem jffs2 è stato montato.
 
 ==== Installing Root Filesystem ====
 
