*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -1,6 +1,6 @@
 {{Om 2008.8}}
 
-This documents quickly some key useability bits about [[Om 2008.8]] and initial setup.
+This documents quickly some key usability bits about [[Om 2008.8]] and initial setup.
 
 === Interface ===
 
